tests/should-fail/rb-annotation-3.j
//# +rbutts
function foo takes handle h returns unit
	return h
	return null
endfunction